src/action/popup.css
:root {
  --black: 21, 20, 25;
  --white: 255, 255, 255;
  --accent: 10, 132, 255;
  --passive-grey: 223, 223, 229;
  --active-grey: 207, 207, 216;

  --search-highlight: 255, 233, 0;
}

@media (prefers-color-scheme: dark) {
  :root {
    --black: 251, 251, 254;
    --white: 66, 65, 77;
    --accent: 54, 213, 255;
    --passive-grey: 83, 83, 94;
    --active-grey: 91, 91, 102;

    --search-highlight: 0, 62, 170;
  }
}

html {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  overflow-y: scroll;

  font-size: 14px;
  scrollbar-color: rgb(var(--active-grey)) rgb(var(--white));
}

html, main {
  width: 375px;
  min-width: 100%;
  max-width: 100%;
}

body {
  background-color: rgb(var(--white));
  color: rgb(var(--black));
  font: inherit;
  -webkit-user-select: none;
  user-select: none;
}

#permissions-banner,
#embedded-banner {
  width: 375px;
  min-width: 100%;
  max-width: 100%;
  padding: 8px 4px;
  border-bottom: 1px solid rgb(var(--active-grey));

  text-align: center;
}

#grant-host-permission {
  display: block;
  padding: 0.5ch 1ch;
  border-radius: 0.5ch;
  margin: 8px auto 0;

  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
}

#grant-host-permission:focus {
  outline: 2px solid rgb(var(--accent));
}

#permissions-banner:not([hidden]) + #embedded-banner {
  display: none;
}

[role="tablist"] {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 8px 4px;
  border-bottom: 1px solid rgb(var(--active-grey));
}

[role="tablist"] [role="tab"] {
  flex-grow: 1;
  padding: 8px;
  border: none;
  border-radius: 5px;
  margin: 0 4px;

  background-color: transparent;
  color: rgb(var(--black));
  font-weight: bold;
  text-align: center;
  text-decoration: none;
}

[role="tablist"] [role="tab"]:hover {
  background-color: rgb(var(--passive-grey));
  cursor: pointer;
}

[role="tablist"] [role="tab"]:active,
[role="tablist"] [role="tab"][aria-selected="true"] {
  background-color: rgb(var(--active-grey));
}

input[type="text"],
select,
textarea {
  padding: 4px;
  border: none;
  border-radius: 3px;

  background-color: rgb(var(--passive-grey));
  color: rgb(var(--black));
}

::placeholder {
  color: inherit;
  opacity: .55;
}

input[type="text"] {
  padding-left: 8px;
  padding-right: 8px;
}

input[type="text"]:focus,
select:focus {
  background-color: rgb(var(--active-grey));
}

textarea {
  resize: none;
  width: 100%;
}

textarea,
pre {
  scrollbar-color: rgba(var(--black), 0.5) rgb(var(--passive-grey));
  scrollbar-width: thin;
}

